# formatter_agent

./: .dockerignore  .env.example  .gitignore  AI_Agent_requirement.md  Dockerfile  README.md  docker-compose.yml  main.py  polish.md  polish2.md  polish3.md  pyproject.toml  tasks.py  test_main.http
agent/: __init__.py  compiler.py  finalizer.py  policy.py  reducer.py  runner.py  state.py
alembic/: env.py
conf/: __init__.py  celery_app.py  db_conf.py  logging_conf.py  settings.py
crud/: __init__.py  task_record_crud.py
docs/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md
models/: __init__.py  task_record.py
outputs/: structured_search_result_AI_产品经理_20260415_093515.xlsx  structured_search_result_AI_产品经理_20260415_093612.xlsx  structured_search_result_AI_产品经理_20260415_093653.xlsx  structured_search_result_AI_产品经理_20260415_094211.xlsx  structured_search_result_AI_产品经理_20260415_094537.xlsx  structured_search_result_AI_产品经理_20260415_094851.xlsx  structured_search_result_AI_产品经理_20260415_112641.xlsx  structured_search_result_AI_产品经理_20260415_113344.xlsx  structured_search_result_AI_产品经理_20260415_113447.xlsx  structured_search_result_AI_产品经理_20260415_125704.xlsx  structured_search_result_AI_产品经理_20260415_125721.xlsx  structured_search_result_AI_产品经理_20260415_180418.xlsx  structured_search_result_AI_产品经理_20260415_180618.xlsx  structured_search_result_AI_产品经理_20260415_193245.xlsx  structured_search_result_AI_产品经理_20260415_194730.xlsx  structured_search_result_AI_产品经理_20260415_194823.xlsx  structured_search_result_AI_产品经理_20260415_195202.xlsx  (+5 more)
schemas/: common.py  (+9 more)
(+56 files in other folders)
